2004-12-16  Thomas Wolff  <towo@computer.org>

	* fhandler_console.cc (get_win32_attr): Avoid inappropriate intensity
	interchanging that used to render reverse output unreadable when
	non-reversed text is bright.

2004-12-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Add utmpx symbols.
	* syscalls.cc: Include utmpx.h.  Implement utmpx functions as stubs
	to utmp functions.
	(copy_ut_to_utx): New static function.
	(pututline): Change from void to struct utmp * as on Linux.
	(setutxent): New function.
	(endutxent): New function.
	(getutxent): New function.
	(getutxid): New function.
	(getutxline): New function.
	(pututxline): New function.
	* include/utmpx.h: New file.
	* include/cygwin/utmp.h: New file.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/utmp.h: Include cygwin/utmp.h.  Move stuff common with
	utmpx functionality there.
	(pututline): Declare struct utmp *.

2004-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* tty.cc (tty_list::terminate): Guard releasing the tty with tty_mutex.
	(tty::init): Set master_pid to 0.

2004-12-14  Thomas Wolff  <towo@computer.org>

	* fhandler_console.cc (read): Consider offset within scrolling
	region of the console window.

2004-12-13  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (cwdstuff::get_drive): Release cwd_lock.

2004-12-12  Bas van Gompel  <cygwin-patch@bavag.tmfweb.nl>

	* fhandler.cc (fhandler_base::puts_readahead): Fix end-condition.

2004-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* errno.cc (errmap): Map ERROR_INVALID_ADDRESS to EINVAL instead of
	EOVERFLOW.

2004-12-10  Christopher Faylor  <cgf@timesys.com>

	* include/sys/strace.h: Don't output paranoid_printf by default.

2004-12-09  Christopher Faylor  <cgf@timesys.com>

	* lib/libcmain.c (main): Properly deal with quoted first argument.

2004-12-06  Christopher Faylor  <cgf@timesys.com>

	* pinfo.h (proc_pipe::*): Delete class.
	* pinfo.cc (proc_pipe::*): Ditto.
